--- a/CSS/external.css
+++ b/CSS/external.css
@@ -13,7 +13,11 @@ body {
     margin: 0px;
 }
 nav {   
-    display: flex; flex-direction: row;
-    justify-content: flex-start; align-items: stretch; align-content: stretch;
+    display: flex; flex-direction: row; flex-wrap: nowrap;
+    justify-content: flex-start;
     background-color: #07575b; height: 200px; margin: 10px; padding-top: 5px; color:aliceblue;
+}
+a {
+    background-color: #66A5AD; display: inline-block; text-align: center; padding: 20px;
+    margin-bottom: 5px; margin-left: 5px; margin-right: 5px; color: aliceblue; border: 3px solid #C4DFE6;
 }
