--- a/CSS/external.css
+++ b/CSS/external.css
@@ -1,23 +1,34 @@
 * {
     -webkit-box-sizing: border-box; /* Safari/Chrome */
-    -moz-box-sizing: border-box;    /* Firefox */
-    -o-box-sizing: border-box;      /*Opera*/
-    -ms-box-sizing: border-box;     /*Microsoft*/
+    -moz-box-sizing: border-box;    /*Microsoft*/
     box-sizing: border-box;         /*Standard*/
-}
-a:hover {
-    background-color: cyan; color: green;
-    padding: 30px;
-}
+}    
 body {
     margin: 0px;
 }
-nav {   
-    display: flex; flex-direction: row; flex-wrap: nowrap;
+nav {
+    background-color: #07575B;
+    height: 200px;
+    margin: 10px;
+    padding-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    display: -moz-box;
+    display: -webkit-box;
     justify-content: flex-start;
-    background-color: #07575b; height: 200px; margin: 10px; padding-top: 5px; color:aliceblue;
+    align-items: flex-start;
+    align-content: center;
 }
 a {
-    background-color: #66A5AD; display: inline-block; text-align: center; padding: 20px;
-    margin-bottom: 5px; margin-left: 5px; margin-right: 5px; color: aliceblue; border: 3px solid #C4DFE6;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #66A5AD;
+    text-align: center;
+    padding: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    color: aliceblue;
+    border: 3px solid #C4DFE6;
+    flex: 2 0 215px;
 }
