--- a/CSS/external.css
+++ b/CSS/external.css
@@ -30,5 +30,7 @@ a {
     margin-bottom: 5px;
     color: aliceblue;
     border: 3px solid #C4DFE6;
+    flex: -webkit-box;
+    flex: -moz-box;
     flex: 2 0 215px;
 }
