--- a/CSS/external.css
+++ b/CSS/external.css
@@ -7,25 +7,26 @@
 body {
     margin: 0px;
 }
-nav {
-    background-color: #07575B;
-    height: 200px;
-    margin: 10px;
-    padding-top: 5px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -moz-box;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
 nav a {
     display: inline;
     background-color: #66A5AD;
     text-align: center;
     padding: 20px;
-    margin-left: 5px; margin-right: 5px; margin-bottom: 5px;
+    margin: 0px 5px 5px 5px;
     color: aliceblue;
     border: 3px solid #C4DFE6;
-    flex: 2 0 215px;
+}
+nav ul {
+    list-style-type: none;
+    background-color: #07575B;
+    height: 200px;
+    margin: 10px;
+    padding-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+nav ul a {
+    text-decoration: none;
 }
